Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45977

macdeployqt doesn't include QtQuick.PrivateWidgets plugin

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.5.1
    • 5.5.0 Alpha
    • None
    • Mac OS X, Qt 5.5 alpha (also reproducible on Qt 5.4)
    • 247b9999cd389ae5b11a21b535b1c9ff817dc9c6

    Description

      To reproduce, create a new Qt Quick 2 project, create a Release build, run macdeployqt. Try starting the app:

      $ ./DeployBug
      QQmlApplicationEngine failed to load component
      qrc:/main.qml:33 Type MessageDialog unavailable
      qrc:/QtQuick/Dialogs/WidgetMessageDialog.qml:38 module "QtQuick.PrivateWidgets" is not installed
      

      Workaround: add import to any qml file:

      import QtQuick.PrivateWidgets 1.0
      

      This worked correctly in Qt 5.3, but broke in 5.4, still broken in 5.5 alpha.
      Please find attached a sample project. Compile, adjust paths in mac_deploy.sh, then run mac_deploy.sh

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              sorvig Morten Sørvig
              zmeyc Andrey Fidrya
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes