macdeployqt: Workaround for QtQuick.PrivateWidgets

Deploy PrivateWidgets if QtWidget.framework and
QtQuick.Controls is in use.

Task-number: QTBUG-45977
Change-Id: Id2d7af8895be136d84bed92043fc790b156d8dea
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@theqtcompany.com>